# private-assistant-scene-skill-py

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  README.md  mypy.ini  pyproject.toml  pytest.toml  renovate.json  ruff.toml  template.yaml
.devcontainer/: Containerfile  compose.yml  devcontainer.json
.devcontainer/config/: mosquitto.conf
.github/workflows/: container-build-pr.yml  container-build-push.yml  python_code_quality.yml  release-please.yml
integration/: __init__.py  test_integration.py
src/private_assistant_scene_skill/: __init__.py  config.py  main.py  models.py  scene_skill.py
src/private_assistant_scene_skill/templates/: __init__.py  apply.j2  help.j2  list.j2
tests/: test_config.py  test_integration.py  test_scene_skill.py  test_templates.py
