[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "private-assistant-scene-skill"
version = "1.0.2"
description = "Scene Control Skill for Private Assistant: Enables automated and voice-activated scene control within smart home environments."
authors = ["stkr22 <stkr22@github.com>"]
readme = "README.md"
license = "GNU General Public License v3.0"
include = ["src"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = {extras = ["all"], version = "^0.12.3"}
pydantic = "^2.8.2"
homeassistant-api = "^4.2.2.post1"
jinja2 = "^3.1.3"
private-assistant-commons = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
mypy = "^1.11.2"
pytest = "^8.3.3"
types-pyyaml = "^6.0.12.20240311"

[tool.poetry.scripts]
private-assistant-scene-skill = "private_assistant_scene_skill.main:app"

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = ["E203"]
