[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "private-assistant-scene-skill"
version = "2.2.0"
description = "Scene Control Skill for Private Assistant: Enables automated and voice-activated scene control within smart home environments."
authors = [
    { name = "stkr22", email = "stkr22@github.com" }
]
readme = "README.md"
license = "GPL-3.0-only"
license-files = [
    "LICENSE",
]

keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]

requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic~=2.9.2",
    "jinja2~=3.1.3",
    "private-assistant-commons~=5.2.2",
    "typer~=0.20.0",
]

[project.urls]
Homepage = "https://github.com/stkr22/private-assistant-scene-skill-py"
Repository = "https://github.com/stkr22/private-assistant-scene-skill-py"
Documentation = "https://github.com/stkr22/private-assistant-scene-skill-py/tree/main/docs"
Issues = "https://github.com/stkr22/private-assistant-scene-skill-py/issues"
Changelog = "https://github.com/stkr22/private-assistant-scene-skill-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.14.1",
    "mypy~=1.17.0",
    "pytest~=8.4.1",
    "pytest-cov~=6.2.1",
    "types-pyyaml~=6.0.12.20240311",
    "coverage[toml]~=7.6.0",
    "pytest-asyncio~=0.26.0",
]

[project.scripts]
private-assistant-scene-skill = "private_assistant_scene_skill.main:app"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
markers = [
    "asyncio: mark a test as an async test",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["private_assistant_scene_skill"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]
